# watchhouse

./: .env.example  .gitignore  CLAUDE.md  README.md  build_exe.py  cameras.yaml  pyproject.toml  weights.lock.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/00-environment-sanity/: 00-01-scaffolding-PLAN.md  00-01-scaffolding-SUMMARY.md  00-02-framesource-capture-PLAN.md  00-02-framesource-capture-SUMMARY.md  00-03-measurement-harness-PLAN.md  00-03-measurement-harness-SUMMARY.md  00-99-phase0-patch-SUMMARY.md  00-CONTEXT.md  PHASE0-REPORT.json
.planning/phases/01-multi-stream-ingest-reconnect/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-HUMAN-UAT.md  01-REVIEW.md  01-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: __init__.py  main.py
app/core/: cameras.py  clip_library.py  config.py  discovery.py  ip_cache.py  log.py  playback_player.py  playback_probe.py  probe.py  recorder.py  stream.py
app/ui/: camera_tile.py  console_panel.py  icon_button.py  import_clip_dialog.py  main_window.py  playback_view.py  theme.py  timeline_drawer.py  timeline_widget.py  wipe_dialog.py
src/home_cctv/: __init__.py  __main__.py
src/home_cctv/config/: __init__.py  cameras.py  env.py
src/home_cctv/ingest/: __init__.py  backoff.py  capture.py  display.py  flags.py  frame_quality.py  ingest_supervisor.py  main_stream_grabber.py  stream_reader.py  supervisor.py  watchdog.py
src/home_cctv/obs/: __init__.py  heartbeat.py  logging_setup.py
src/home_cctv/phase0/: __init__.py  host_probe.py  model_bundle.py  network_probe.py  report.py  sanity.py
tests/: __init__.py  test_backoff.py  test_cameras_yaml.py  test_config_env.py  test_flags_builder.py  test_frame_quality.py  test_framesource_mp4.py  test_heartbeat.py  test_host_probe.py  test_ingest_supervisor.py  test_logging_mask.py  test_main_stream_grabber.py  test_model_bundle.py  test_phase0_patch.py  test_report_schema.py  test_stream_reader.py  test_stream_reader_reconnect.py  test_supervisor_shutdown.py  test_watchdog.py
tests/fixtures/: make_fixtures.py
