[project]
name = "home-cameras-console"
version = "0.1.2"
description = "Local CCTV console for a 4-camera BitVision/Cantonk DVR over RTSP. Windows-native, single executable."
requires-python = ">=3.11,<3.13"
authors = [{ name = "Abdo Tolba" }]
dependencies = [
    "pyside6==6.8.1",
    "opencv-python-headless==4.10.0.84",
    "numpy==1.26.4",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
build = ["pyinstaller==6.11.1"]

[project.scripts]
cctv-console = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
