[project]
name = "watchhouse"
version = "0.3.0"
description = "Watchhouse - a local AI surveillance platform for legacy DVRs. Live 4-camera view with auto-discovery, segment-recording of all four streams, AI event detection on the roadmap. Windows-native, single executable."
requires-python = ">=3.11,<3.13"
authors = [{ name = "Abdo Tolba" }]
dependencies = [
    "pyside6==6.8.1",
    "opencv-python-headless==4.10.0.84",
    "numpy==1.26.4",
    "python-dotenv==1.0.1",
    "imageio-ffmpeg==0.6.0",
]

[project.optional-dependencies]
build = ["pyinstaller==6.11.1"]

[project.scripts]
watchhouse = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
